<resources>
    <string name="app_name">聚合资讯</string>

    <string name="test">Hello World</string>

    <string name="content_description">缩略图</string>

    <string name="menu_item_share">分享</string>

    <string name="navigation_open">打开导航栏</string>
    <string name="navigation_close">关闭导航栏</string>

    <string name="navigation_item_newspaper">新闻头条</string>
    <string name="navigation_item_weather">天气预报</string>

    <string name="share_to">分享到</string>

    <string name="top">头条</string>
    <string name="shehui">社会</string>
    <string name="guonei">国内</string>
    <string name="guoji">国际</string>
    <string name="yule">娱乐</string>
    <string name="tiyu">体育</string>
    <string name="junshi">军事</string>
    <string name="keji">科技</string>
    <string name="caijing">财经</string>
    <string name="shishang">时尚</string>

    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="du">°</string>
    <string name="humidity">湿度</string>
    <string name="pm25">PM2.5</string>
    <string name="divider"> | </string>
    <string name="percent"> % </string>
    <string name="pwcong">www.pwcong.me</string>
    <string name="powered_by_pwcong">POWERED BY Pwcong</string>
    <string name="future_5_days">未来 5 天</string>
    <string name="life_stat">生活状况</string>

    <string name="xiche">洗车</string>
    <string name="ganmao">感冒</string>
    <string name="kongtiao">空调</string>
    <string name="chuanyi">穿衣</string>
    <string name="wuran">污染</string>
    <string name="yundong">运动</string>
    <string name="ziwaixian">紫外线</string>
    <string name="loading">加载中…</string>
    <string name="joke">开心一刻</string>
    <string name="other">其他</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>



    <string name="hello_you">Hello You</string>
    <string name="hello_u_content">这是我的一个练习项目，第一次尝试运用 <b>MVP模式</b> 书写代码，有很多不足之处，望轻喷。\n (=・ω・=)</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_content">如果你喜欢该项目，期待你给个 star 。当然我也希望你能够 fork 下来，我们一起完善它。\n(｡・`ω´･)</string>
    <string name="source_code_zh">源码</string>
    <string name="blog">博客</string>
    <string name="thanks">Thanks</string>
    <string name="thanks_content">感谢开源项目的代码支持和开放平台免费提供数据。 \no(*≧▽≦)ツ</string>
    <string name="link_rxjava">ReactiveX/RxJava</string>
    <string name="link_rxandroid">ReactiveX/RxAndroid</string>
    <string name="link_retrofit">square/retrofit</string>
    <string name="link_glide">bumptech/glide</string>
    <string name="link_butterknife">JakeWharton/butterknife</string>
    <string name="link_baserecyclerviewadapterhelper">CymChad/BaseRecyclerViewAdapterHelper</string>
    <string name="link_citypicker">zaaach/CityPicker</string>
    <string name="juhe">聚合数据</string>
    <string name="here">Here</string>
    <string name="here_content">当前版本：v1.0.0 \n作者：Pwcong</string>

    <string name="url_source">https://github.com/pwcong/RtfRxMVP</string>
    <string name="url_blog">http://www.pwcong.me</string>
    <string name="push_msg">消息推送</string>
    <string name="push_msg_content">定时推送热点资讯以及天气预报</string>
    <string name="push_msg_timer">推送周期</string>
    <string name="backstage">后台</string>
    <string name="system">系统</string>
    <string name="enter_view">开始界面</string>
    <string name="enter_view_content">应用启动时展示开始界面</string>
    <string name="update_timer">推送周期</string>


</resources>
