<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:icon="@drawable/newspaper"
            android:id="@+id/item_newspaper"
            android:title="@string/navigation_item_newspaper"/>

        <item android:id="@+id/item_weather"
            android:title="@string/navigation_item_weather"
            android:icon="@drawable/cloud_outline"/>

        <item android:icon="@drawable/emoticon_happy"
            android:title="@string/joke"
            android:id="@+id/item_joke"/>

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/item_about"
                android:icon="@drawable/information_outline"
                android:title="@string/about" />

            <item
                android:id="@+id/item_setting"
                android:icon="@drawable/settings"
                android:title="@string/setting" />
        </menu>
    </item>



</menu>