<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/message_text_outline"
            android:drawableLeft="@drawable/message_text_outline"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/hello_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/hello_u_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/code_tags"
            android:drawableLeft="@drawable/code_tags"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/source_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:lineSpacingMultiplier="1.3"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/source_code_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:baselineAligned="false"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:background="@drawable/item_click"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/link_source"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:drawablePadding="4dp"
                    android:drawableLeft="@drawable/github_box"
                    android:drawableStart="@drawable/github_box"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/source_code_zh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/item_click"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:id="@+id/link_blog"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/blogger"
                    android:drawableLeft="@drawable/blogger"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/link"
            android:drawableStart="@drawable/link"
            android:drawablePadding="4dp"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:text="@string/thanks"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:lineSpacingMultiplier="1.3"
                android:text="@string/thanks_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:gravity="center_vertical"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/numeric_1_box_outline"
                    android:drawableLeft="@drawable/numeric_1_box_outline"
                    android:text="@string/link_rxjava"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text="@string/link_rxandroid"
                    android:drawableLeft="@drawable/numeric_2_box_outline"
                    android:drawableStart="@drawable/numeric_2_box_outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text="@string/link_retrofit"
                    android:drawableLeft="@drawable/numeric_3_box_outline"
                    android:drawableStart="@drawable/numeric_3_box_outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text="@string/link_glide"
                    android:drawableLeft="@drawable/numeric_4_box_outline"
                    android:drawableStart="@drawable/numeric_4_box_outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text="@string/link_butterknife"
                    android:drawableLeft="@drawable/numeric_5_box_outline"
                    android:drawableStart="@drawable/numeric_5_box_outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text="@string/link_baserecyclerviewadapterhelper"
                    android:drawableLeft="@drawable/numeric_6_box_outline"
                    android:drawableStart="@drawable/numeric_6_box_outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text="@string/link_citypicker"
                    android:drawableLeft="@drawable/numeric_7_box_outline"
                    android:drawableStart="@drawable/numeric_7_box_outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text="@string/juhe"
                    android:drawableLeft="@drawable/numeric_8_box_outline"
                    android:drawableStart="@drawable/numeric_8_box_outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/calendar_today"
            android:drawableStart="@drawable/calendar_today"
            android:drawablePadding="4dp"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:text="@string/here"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:lineSpacingMultiplier="1.3"
                android:text="@string/here_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>