<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="@dimen/height_header">

    <ImageView
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/weather_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_headline"
        android:text=""
        android:id="@+id/tv_temperature"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_headline"
        android:text="@string/du"
        android:layout_alignTop="@+id/tv_temperature"
        android:layout_toRightOf="@+id/tv_temperature"
        android:layout_toEndOf="@+id/tv_temperature"
        android:id="@+id/tv_du" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_du"
        android:layout_toRightOf="@+id/tv_du"
        android:layout_toEndOf="@+id/tv_du">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/size_text_headline2"
            android:id="@+id/tv_city_name"/>

        <TextView
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/divider"
            android:id="@+id/textView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_text_headline2"
            android:text=""
            android:id="@+id/tv_weather_info"/>

    </LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:baselineAligned="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_wind_direct"
                android:textSize="16sp"
                android:text=""
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="4dp"
                android:text=""
                android:id="@+id/tv_wind_power"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <FrameLayout
            android:background="@color/divider"
            android:layout_weight="0.02"
            android:layout_width="0dp"
            android:layout_height="56dp"/>

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="16sp"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text=""
                    android:id="@+id/tv_humidity"
                    android:textSize="26sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="26sp"
                    android:text="@string/percent"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>



        </LinearLayout>

        <FrameLayout
            android:background="@color/divider"
            android:layout_weight="0.02"
            android:layout_width="0dp"
            android:layout_height="56dp"/>

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="16sp"
                android:text="@string/pm25"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="4dp"
                android:text=""
                android:id="@+id/tv_pm25"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:contentDescription="@string/content_description"
        android:layout_width="@dimen/size_weather_img"
        android:layout_height="@dimen/size_weather_img"
        android:id="@+id/iv_weather"
        android:scaleType="centerCrop"
        android:layout_alignTop="@+id/tv_du"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />


</RelativeLayout>