<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="80dp">


    <LinearLayout
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/content_description"
            android:layout_margin="6dp"
            android:id="@+id/iv_weather"
            android:layout_width="match_parent"
            android:scaleType="centerInside"
            android:layout_height="match_parent" />

    </LinearLayout>



    <LinearLayout
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:orientation="vertical"
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center_vertical"
                    android:text="asd"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text=""
                    android:textSize="16sp"
                    android:id="@+id/tv_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <TextView
                android:gravity="center_vertical"
                android:text=""
                android:textSize="14sp"
                android:id="@+id/tv_nongli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:id="@+id/tv_weather_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/divider"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_wind_direct"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_width="4dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_wind_power"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:layout_height="match_parent">

        <TextView
            android:textSize="36sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text=""
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/du"
            android:textSize="36sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>